--- a/00_global_insight/package.json
+++ b/00_global_insight/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:e2e": "jest --testPathPattern=src/e2e",
     "start": "nodemon ./dist/index.js",
     "build": "tsc --build -w"
   },
@@ -21,8 +22,10 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/passport": "^1.0.16",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
